[package]
name = "cryptopals-rust"
version = "0.1.0"
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]

[lib]
name = "cryptopals"
path = "src/lib.rs"

[[bin]]
name = "cryptopals"
path = "src/main.rs"

[dependencies]
clap = "^2.26"
error-chain = "^0.11"
itertools = "^0.6"
openssl = "^0.9"
rayon = "^0.8"
